# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  03 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/create-iso.sh:
  Don't escape quotes when actually running the command

  02 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Pass clst_root_path instead of ROOT to run_emerge, since it overrides ROOT

  29 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Use -L instead of -l in test for symlink

  29 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh:
  Remove code for gcc-config/binutils-config since it should be getting done
  in the preclean script, anyway.

  29 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  I missed one place where HOSTUSE was being used incorrectly.

  29 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Escape the correct quote

  29 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Change remaining instances of run_emerge to run_merge

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh:
  Change all clst_hostuse checks for ppc/ppc64 to ppc*|powerpc* so we match,
  no matter what.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Let's change our splash checking to a global check so it only needs to be
  done once. This makes much more sense than having all of those if ... else
  ... statements.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/support/kmerge.sh:
  Fix our USE invocation here so things work as expected.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Force-enable livecd/users for livecd/type gentoo-release-livecd and
  gentoo-gamecd.
